--- a/views/models.hbs
+++ b/views/models.hbs
@@ -1,1 +1,25 @@
 <h1>Models</h1>
+
+{{#if models.length}}
+    {{#each models}}
+        <div class="row">
+            <div class="col s6 offset-3">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="{{img}}" alt="{{title}}">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title">{{title}}</span>
+                        <p class="price">{{price}}</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="models/{{id}}" target="_blank">Open details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <pre>{{models}}</pre>
+    {{/each}}
+{{else}}
+    <p>Empty</p>
+{{/if}}
